[FIX] Admin modules: active tab not showing as a tab due to tab background color matching the parent tab's content background color Add a border. something else should probably be done to make it look more active CSS people: please review
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@33480 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/fivealive.css
+++ b/styles/fivealive.css
@@ -970,6 +970,10 @@ fieldset.admin label,
 	float: left;
 }
 
+.tabcontent .tabmark {
+	border: 1px solid #11597e;
+}
+
 .tabmark {
 	float: left;
 	border: 1px solid #11597e;
